--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goBarberAPI",
+  "name": "gobarber-server",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -31,8 +31,8 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^5.1.0",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
